fix(header) Gap between navigation bar and header on Summary screen #129

--- a/inst/shiny/sdcApp/www/ihsn-extra-shell.css
+++ b/inst/shiny/sdcApp/www/ihsn-extra-shell.css
@@ -23,5 +23,9 @@
 .wb-maincolumn > .shiny-html-output > .shiny-html-output{
   margin: 0;
 }
+
+#show_info_general.shiny-html-output{
+  margin: 0;
+}
 /*
  * **/
